Add notification system and fix a bug
Add notification system
- Notification on the bar
- Notification list
- Delete notification action
Fix a bug
- It should not show anonymous users in an answer or a question.

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,7 +1,7 @@
 - if ! (current_user.has_role?(:student) && comment.hidden)
   .row
     .span6
-      = comment_owner_link(comment)
+      = anonymous_user(comment)
       %b= 'answered' 
       #{time_ago_in_words(comment.created_at)} ago.
     .span1.offset1
