--- a/app/views/comments/show.html.haml
+++ b/app/views/comments/show.html.haml
@@ -16,7 +16,7 @@
   %b Anonymous:
   = @comment.anonymous
 %p
-  User_id: #{anonymous_user?( @comment )}
+  User_id: #{anonymous_user( @comment )}
 %p
   Question_id: #{@comment.question_id}
 
