--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -5,9 +5,11 @@
 = link_to "Green Dophin", root_path, :class => 'brand'
 .nav-collapse.collapse{:style => "height: 0px;"}
   %ul.nav
-    = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
-      = text_field_tag :query, params[:query], class: 'search-query'
     - if user_signed_in?
+      %li
+        = link_to pluralize(current_notifications.count,'Notification'), notifications_path
+      = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
+        = text_field_tag :query, params[:query], class: 'search-query'
       %li
         = link_to current_user.name, current_user
       %li
