--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -1,24 +1,6 @@
-%h1 Listing notifications
-
-%table
-  %tr
-    %th User
-    %th Receiver
-    %th Content
-    %th Read
-    %th
-    %th
-    %th
-
-  - @notifications.each do |notification|
-    %tr
-      %td= notification.user_id
-      %td= notification.content
-      %td= notification.read
-      %td= link_to 'Show', notification
-      %td= link_to 'Edit', edit_notification_path(notification)
-      %td= link_to 'Destroy', notification, method: :delete, data: { confirm: 'Are you sure?' }
-
-%br
-
-= link_to 'New Notification', new_notification_path
+.row
+  .span2
+  .span8
+    .page-header 
+      %h1 Your Notifications
+    = render @notifications
