--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -21,8 +21,8 @@
 
   = f.simple_fields_for(:notifications) do |g|
     .form-inputs
-      = g.input :user_id
-      = g.input :content
+      = g.association :user
+      = g.input :read, hidden: true, input_html: { input: false }
 
   .form-actions
     = f.button :submit
