--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,47 +1,20 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
-  = devise_error_messages!
-  %p
-    = f.label :name
-    %br/
-    = f.text_field :name
-  %div
-    = f.label :email
-    %br/
-    = f.email_field :email
-  %div
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, :autocomplete => "off"
-  %div
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation
-  %div
-    = f.label :school
-    %br/
-    = f.text_field :school
-  %div
-    = f.label :sex
-    %br/
-    = f.text_field :sex
-  %div
-    = f.label :level
-    %br/
-    = f.text_field :level
-  %div
-    = f.label :tag_list
-    %br/
-    = f.text_field :tag_list
-  %div
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password
-  %div= f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{link_to "Cancel my account", registration_path(resource_name), :confirm => "Are you sure?", :method => :delete}.
-= link_to "Back", :back
+.row
+  .span2
+  .span8
+    .page-header
+      %h1 Edit #{resource_name.to_s.humanize}
+    = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
+      = devise_error_messages!
+      .well.form-horizontal
+        = f.input :name
+        = f.input :email
+        = f.input :password, hint: "(leave blank if you don't want to change it)"
+        = f.input :password_confirmation
+        = f.input :school
+        = f.input :sex, :collection => ['Female','Male']
+        = f.input :level, :collection => ['Freshman','Sophomore', 'Junior', 'Senior', 'Graduate']
+        = f.input :tag_list
+        = f.input :current_password, hint: '(we need your current password to confirm your changes)'
+      .form-actions
+        = f.button :submit
+        = link_to '<i class="icon-arrow-left"></i> Back'.html_safe, :back, class: 'btn'
