--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -12,5 +12,5 @@
 
     = render 'question_feed'
 
-    = link_to 'New Question', new_question_path
+    = link_to 'New Question', new_question_path, class: 'btn btn-primary'
 
