--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -4,25 +4,36 @@
   %span.icon-bar
 = link_to "Green Dophin", root_path, :class => 'brand'
 .nav-collapse.collapse{:style => "height: 0px;"}
-  %ul.nav
-    - if user_signed_in?
+  - if user_signed_in?
+    %ul.nav
+      %li.divider-vertical
       %li
+        - notification_count = current_notifications.count
         = link_to pluralize(current_notifications.count,'Notification'), notifications_path
+      %li.divider-vertical
       = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
         = text_field_tag :query, params[:query], class: 'search-query'
+    %ul.nav.pull-right
       %li
         = link_to current_user.name, current_user
-      %li
-        = link_to('Edit account', edit_user_registration_path)
-      - if current_user.has_role? :admin
-        %li
-          = link_to('Admin', users_path)
-    - else
+      %li.divider-vertical
+      %li.dropdown
+        %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
+          Setting
+          %b.caret
+        %ul.dropdown-menu
+          %li
+            = link_to('Edit account', edit_user_registration_path)
+          - if current_user.has_role? :admin
+            %li
+              = link_to('Admin', users_path)
+          %li.divider
+          %li
+            = link_to('Logout', destroy_user_session_path, :method=>'delete')
+  - else
+    %ul.nav.pull-right
       %li
         = link_to('Sign up', new_user_registration_path)
-    - if user_signed_in?
-      %li
-        = link_to('Logout', destroy_user_session_path, :method=>'delete')
-    - else
+      %li.divider-vertical
       %li
         = link_to('Login', new_user_session_path)
