--- a/app/views/questions/_question_comment_form.html.haml
+++ b/app/views/questions/_question_comment_form.html.haml
@@ -1,7 +1,9 @@
 = simple_form_for(@comment) do |f|
   = f.error_notification
   .form
-    = f.input :content, :label => false, :placeholder => "Please answer your friend's question",:input_html => { :class => 'editable span8'}
+    %legend 
+      Please answer your friend's question
+    = f.input :content, :label => false ,:input_html => { :class => 'editable span8'}
     = f.input :code, :as => :hidden, :input_html => { :value => 0 }
     = f.input :question_id, :as => :hidden, :input_html => { :value => @question.id } 
     = f.input :line, :as => :hidden, :input_html => { :value => 0 }
@@ -11,5 +13,6 @@
       = f.input :hidden, :as => :hidden, :input_html => { :value => true }
     - else
       = f.input :hidden, :as => :hidden, :input_html => { :value => false }
-    = f.input :anonymous, :label => false, :inline_label => 'Answer anonymously'
-    = f.submit 'Answer', class: 'btn btn-primary pull-right'
+    .form-actions
+      = f.input :anonymous, :label => false, :inline_label => 'Answer anonymously'
+      = f.submit 'Answer', class: 'btn btn-primary pull-right'
