--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -5,3 +5,9 @@ $iconWhiteSpritePath: asset-url('glyphicons-halflings-white.png', image);
 @import "bootstrap.min";
 body { padding-top: 60px; }
 @import "bootstrap-responsive.min";
+
+.popular-label{
+  @extend .label;
+  @extend .label-info;
+}
+
