--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -3,19 +3,23 @@
   %span.icon-bar
   %span.icon-bar
 = link_to "Green Dophin", root_path, :class => 'brand'
+- if user_signed_in?
+  %ul.nav
+    %li.divider-vertical
+    %li
+      - notification_count = current_notifications.count
+      = link_to pluralize(current_notifications.count,'Notification'), notifications_path
+    %li.divider-vertical
+    = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
+      = text_field_tag :query, params[:query], class: 'search-query'
 .nav-collapse.collapse{:style => "height: 0px;"}
   - if user_signed_in?
-    %ul.nav
-      %li.divider-vertical
-      %li
-        - notification_count = current_notifications.count
-        = link_to pluralize(current_notifications.count,'Notification'), notifications_path
-      %li.divider-vertical
-      = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
-        = text_field_tag :query, params[:query], class: 'search-query'
     %ul.nav.pull-right
       %li
         = link_to current_user.name, current_user
+      %li.divider-vertical
+      %li
+        = link_to "#{current_user.points} points", current_user
       %li.divider-vertical
       %li.dropdown
         %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
