--- a/app/views/questions/index.html.haml
+++ b/app/views/questions/index.html.haml
@@ -6,7 +6,7 @@
     .row
       .span8
         #tag_cloud
-          - tag_cloud Question.tag_counts, %w(label) do |tag, css_class|
+          - tag_cloud Question.tag_counts, %w(label popular-label) do |tag, css_class|
             = tag_questions_link(tag, css_class)
         %hr
 
