--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -8,7 +8,7 @@
     %li.divider-vertical
     %li
       - notification_count = current_notifications.count
-      = link_to pluralize(current_notifications.count,'Notification'), notifications_path
+      = link_to pluralize(current_notifications.count,'Notifications'), notifications_path
     %li.divider-vertical
     = form_tag questions_path, method: :get, class: 'navbar-search pull-left' do
       = text_field_tag :query, params[:query], class: 'search-query'
