--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,4 +1,4 @@
-- if ! (current_user.has_role?(:student) && comment.hidden)
+-if ! (current_user.has_role?(:student) && comment.hidden) || @question_owner
   .row
     .span6
       = anonymous_user(comment)
@@ -7,31 +7,9 @@
     .span1.offset1
       %h2= comment.usefuls.count
       %p= 'Useful'
-  .row
-    .span8
-      %p= raw comment.content
-  .row
-    .span8
-      - owner = current_user_owner?(User.find(comment.user_id))
-      - user_useful_array = comment.usefuls.where(user_id: current_user.id)
-      = useful_comment_link(user_useful_array, comment)
-      = best_answer(@good_answer, comment)
-      - if @admin || @question_owner
-        = good_answer_button(@good_answer, comment)
-      - if @admin || owner
-        = link_to edit_comment_path(comment), class: 'btn btn-small' do
-          %i.icon-edit
-          Edit
-      - if owner || @admin || @teacher
-        .btn-group.pull-right
-          %a.btn.btn-mini.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            %i.icon-cog
-            %span.caret
-          %ul.dropdown-menu
-            %li
-              = link_to comment, :data => {:confirm => 'Are you sure?'}, :method => :delete do
-                %i.icon-trash
-                Delete         
-  .row
-    .span8
-      %hr
+  -if @question_owner && comment.hidden
+    =render 'comments/question_owner_content', comment: comment
+  -elsif @teacher && comment.hidden
+    =render 'comments/teacher_content', comment: comment
+  -else
+    =render 'comments/normal_content', comment: comment
