--- a/app/views/questions/_question_information.html.haml
+++ b/app/views/questions/_question_information.html.haml
@@ -6,7 +6,7 @@
   .span6
     %h4= @question.title
   .span1
-    %h2= @question.comments.count
+    %h2= @question.comments.where('hidden = false').count
     = good_answer? @question
   .span1
     %h2= @question.usefuls.count
