--- a/app/views/replies/create.js.erb
+++ b/app/views/replies/create.js.erb
@@ -1,2 +1,2 @@
-$('div#replies_of_comment_<%= @reply.comment.id %>').append('<%= j render(@reply) %>');
+$('div#replies_of_comment_<%= @reply.comment_id %>').append('<%= j render(@reply) %>');
 $('textarea#reply_content').val('');
