--- a/app/views/comments/_normal_content.html.haml
+++ b/app/views/comments/_normal_content.html.haml
@@ -2,7 +2,7 @@
   .span8
     %p= raw comment.content
 .row
-  .span8
+  .span8{ id: "comment_control_#{comment.id}" }
     - owner = current_user_owner?(User.find(comment.user_id))
     - user_useful_array = comment.usefuls.where(user_id: current_user.id)
     = useful_comment_link(user_useful_array, comment)
