--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -3,4 +3,6 @@
   .span8
     .page-header 
       %h1 Your Notifications
-    = render @notifications
+    .row
+      .span8{ id: 'notifications_feed' }
+        = render @notifications
