Add question delete information

--- a/app/views/questions/_question.html.haml
+++ b/app/views/questions/_question.html.haml
@@ -15,7 +15,7 @@
     Useful
 .row
   .span8
-    %p= raw question.content
+    %p= question_content question
 .row
   .span7
     =question_tag_list(question)
