--- a/app/views/comments/edit.html.haml
+++ b/app/views/comments/edit.html.haml
@@ -1,7 +1,6 @@
-%h1 Editing comment
-
-= render 'form'
-
-= link_to 'Show', @comment
-\|
-= link_to 'Back', comments_path
+.row
+  .span2
+  .span8
+    .page-header
+      %h1 Edit your answer
+    = render 'form'
