--- a/app/views/questions/_question_comment_form.html.haml
+++ b/app/views/questions/_question_comment_form.html.haml
@@ -7,6 +7,7 @@
     = f.input :code, :as => :hidden, :input_html => { :value => 0 }
     = f.input :question_id, :as => :hidden, :input_html => { :value => @question.id } 
     = f.input :line, :as => :hidden, :input_html => { :value => 0 }
+    = f.input :deleted_comment, :as => :hidden, :input_html => { :value => false }
     - if @delayTAAnswer 
       = f.input :hidden, :as => :hidden, :input_html => { :value => true }
     - elsif @delayInstructorAnswer
