--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -20,5 +20,5 @@
         = f.input :tag_list, hint: 'Each tag is separated by a semicolon. Ex: Algorithm, Student, Auburn'
         = f.input :current_password, hint: 'We need your current password to confirm your changes', :required => true
         .form-actions
-          = link_to 'Cancle'.html_safe, :back, class: 'btn'
+          = link_to 'Cancel'.html_safe, :back, class: 'btn'
           = f.button :submit, class: 'btn btn-primary'
