Change a user profile

--- a/app/views/notifications/_comment_notification.html.haml
+++ b/app/views/notifications/_comment_notification.html.haml
@@ -4,7 +4,7 @@
       - comment = Comment.find(notification.sendable_id)
       - user = comment.user
       %p
-        %i.icon-question-sign
+        %i.icon-exclamation-sign
         You got an answer from 
         = link_to user.name, user
     .span2
