--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -19,7 +19,7 @@
         = link_to current_user.name, current_user
       %li.divider-vertical
       %li
-        = link_to "#{current_user.points} points", current_user
+        = link_to "#{current_user.points} points", leaderboard_users_path
       %li.divider-vertical
       %li.dropdown
         %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
