--- a/app/views/questions/edit.html.haml
+++ b/app/views/questions/edit.html.haml
@@ -1,7 +1,6 @@
-%h1 Editing question
-
-= render 'form'
-
-= link_to 'Show', @question
-\|
-= link_to 'Back', questions_path
+.row
+  .span2
+  .span8
+    .page-header
+      %h1 Edit your question
+    = render 'form'
