--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -2,21 +2,24 @@
   = f.error_notification
 
   .form-inputs
-    = f.input :title
-    = f.input :content, :input_html => { :class => 'editable' }
-    = f.input :code
-    = f.input :error
-    #tag_cloud
-      - tag_cloud Question.tag_counts, %w(label popular-label) do |tag, css_class|
-        %span{class: css_class}= tag 
-    = f.input :tag_list, input_html: { data: {load: @question.tags} }
-    = f.input :anonymous 
-    - if current_user.points >= 5
-      = f.input :fast_answer, hint: "You have #{current_user.points} points. You need to spend 5 points to use this function."
-    - else
-      = f.input :fast_answer, hint: "You have #{current_user.points} points. You need at least 5 points to use this function.", :disabled => true
-    = f.input :deleted_question, :as => :hidden, :input_html => { :value => false } 
-
+    .control-group
+      = f.input :title, :input_html => { :class => 'span8' }
+      = f.input :content, :input_html => { :class => 'editable span8' }
+    .control-group
+      = f.label :tag_list
+      %p#tag_cloud
+        - tag_cloud Question.tag_counts, %w(label popular-label) do |tag, css_class|
+          %span{class: css_class}= tag 
+      = f.input_field :tag_list, input_html: { data: {load: @question.tags} }
+    .control-group
+      = f.input :anonymous, :label => false, :inline_label => 'Ask a question anonymously' 
+      - if current_user.points >= 5
+        = f.input :fast_answer, :label => false, :inline_label => 'Ask a fast question', hint: "You have #{current_user.points} points. You need to spend 5 points to use this function."
+      - else
+        = f.input :fast_answer, :label => false, :inline_label => 'Ask a fast question', hint: "You have #{current_user.points} points. You need at least 5 points to use this function.", :disabled => true
+      = f.input :deleted_question, :as => :hidden, :input_html => { :value => false } 
+  %legend 
+    Ask experts
   %table
     %tr
       %td Name
@@ -29,12 +32,11 @@
   = f.simple_fields_for(:notifications) do |g|
     - if points >= 5
       .form-inputs
-        = g.association :user, :collection => @experts, hint: "You have #{current_user.points} points. You need to spend 5 points to use this function."
-        = g.input :read, :as => :hidden, :input_html => { :value => false }
+        = g.association :user, :collection => @experts, :prompt => "Choose a expert", :label => 'Ask an expert', hint: "You have #{current_user.points} points. You need to spend 5 points to use this function."
     - else
       .form-inputs
-        = g.association :user, :collection => @experts, hint: "You have #{current_user.points} points. You need to spend 5 points to use this function.", :disabled => true
-        = g.input :read, :as => :hidden, :input_html => { :value => false }
+        = g.association :user, :collection => @experts, :prompt => "Choose a expert", :label => 'Ask an expert', hint: "You have #{current_user.points} points. You need to spend 5 points to use this function.", :disabled => true
+    = g.input :read, :as => :hidden, :input_html => { :value => false }
     - points = points - 5
 
   .form-actions
