--- a/app/views/questions/new.html.haml
+++ b/app/views/questions/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New question
-
-= render 'form'
-
-= link_to 'Back', questions_path
+.row
+  .span2
+  .span8
+    .page-header
+      %h1 Write your question
+    = render 'form'
