--- a/app/views/users/leaderboard.html.haml
+++ b/app/views/users/leaderboard.html.haml
@@ -15,6 +15,7 @@
               %th='Points'
           -rank = 0
           -@users.each do |user|
-            -rank = rank +  1
-            =render 'row_user', user: user, rank: rank, length: @users.length
+            - if !(user.has_role?(:admin) || user.has_role?(:ta) || user.has_role?(:instructor))
+              -rank = rank +  1
+              =render 'row_user', user: user, rank: rank, length: @numberOfStudent
             
