--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -12,6 +12,17 @@
     = javascript_include_tag "application"
     %script{:type => "text/javascript", :src  => "http://cdn.aloha-editor.org/latest/lib/require.js"}
     :javascript
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-37371160-1']);
+      _gaq.push(['_trackPageview']);
+      #{Rails.env.production? ? '': "_gaq.push(['_setDomainName', 'none']);"} 
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+    :javascript
       var Aloha = window.Aloha || (window.Aloha = {});
       Aloha.settings = {sidebar: {disabled: true}};
     %script{:type => "text/javascript", :src  => "http://cdn.aloha-editor.org/latest/lib/aloha.js", :'data-aloha-plugins' => "common/ui, common/format,common/list,common/link,common/highlighteditables,common/table,common/characterpicker,common/image,common/contenthandler,common/undo"}
