--- a/app/views/questions/_form.html.haml
+++ b/app/views/questions/_form.html.haml
@@ -14,7 +14,7 @@
       = f.input_field :tag_list, input_html: { data: {load: @question.tags} }
     .control-group
       = f.input :anonymous, :label => false, :inline_label => 'Ask a question anonymously' 
-      - if current_user.points >= 5
+      - if current_user.points >= 5 && !@question.fast_answer
         = f.input :fast_answer, :label => false, :inline_label => 'Ask a fast question'
       - else
         = f.input :fast_answer, :label => false, :inline_label => 'Ask a fast question', :disabled => true
