Add graph.js to production.rb

--- a/app/views/users/performance.html.haml
+++ b/app/views/users/performance.html.haml
@@ -1,5 +1,5 @@
 - content_for :head do
-  / = javascript_include_tag "individual_require/graphs"
+  = javascript_include_tag "individual_require/graphs"
 .row
   .span8.offset2
     %ul.nav.nav-tabs
