Wrote footer and tuned up performance on client side

--- a/app/views/comments/_aloha.html.haml
+++ b/app/views/comments/_aloha.html.haml
@@ -1,4 +1,4 @@
-- content_for :head do
+- content_for :jscript do
   %link{:href  => "http://cdn.aloha-editor.org/latest/css/aloha.css", :rel => "stylesheet", :type => "text/css"}
   %script{:type => "text/javascript", :src  => "http://cdn.aloha-editor.org/latest/lib/require.js"}
   :javascript
