--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,19 +8,8 @@
     %meta{:content => "", :name => "description"}
     %meta{:content => "", :name => "author"}
     = stylesheet_link_tag    "application", :media => "all"
-    = javascript_include_tag "application"
     = csrf_meta_tags
     = yield(:head)
-    :javascript
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-37371160-1']);
-      _gaq.push(['_trackPageview']);
-      #{Rails.env.production? ? '': "_gaq.push(['_setDomainName', 'none']);"} 
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
   %body
     %header
       .navbar.navbar-fixed-top
@@ -31,4 +20,21 @@
       .container
         = render 'layouts/messages'
         = yield
-    %footer
+    %footer.footer
+      = render 'layouts/footer'
+      = javascript_include_tag "application"
+      = yield(:jscript)
+      :javascript
+        !function(d,s,id){var     js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);
+        js.id=id;js.src="//platform.twitter.com/widgets.js";
+        fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+      :javascript
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-37371160-1']);
+        _gaq.push(['_trackPageview']);
+        #{Rails.env.production? ? '': "_gaq.push(['_setDomainName', 'none']);"} 
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
