--- a/app/views/users/leaderboard.html.haml
+++ b/app/views/users/leaderboard.html.haml
@@ -11,6 +11,7 @@
           %thead
             %tr
               %th='#'
+              %th='Avatar'
               %th='Name'
               %th='Answers'
               %th='Questions'
