--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,6 +1,7 @@
 -if ! (current_user.has_role?(:student) && comment.hidden) || @question_owner
   .row
     .span6
+      = anonymous_user_gravatar(comment)
       = anonymous_user(comment)
       %b= 'answered' 
       #{time_ago_in_words(comment.created_at)} ago.
