--- a/app/views/comments/_comment_feed.html.haml
+++ b/app/views/comments/_comment_feed.html.haml
@@ -3,6 +3,7 @@
     .span6
       .row
         .span6
+          = anonymous_user_gravatar(comment)
           = comment_owner_link(comment)
           %strong= 'answered' 
           #{time_ago_in_words(comment.created_at)} ago.
