--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -6,6 +6,14 @@
     = simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|
       = devise_error_messages!
       .well.form-horizontal
+        .control-group
+          .controls
+            %p
+              = image_tag user_gravatar(@user, 89), :class => "img-polaroid"
+            %p.help-block
+              You can change your profile picture at 
+              = link_to 'Gravatar', 'http://en.gravatar.com/'
+              = '.'
         = f.input :name
         = f.input :email
         = f.input :password, hint: "Leave blank if you don't want to change it"
