Gravatar in a users' profile

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -13,7 +13,7 @@
             %p.help-block
               You can change your profile picture at 
               = link_to 'Gravatar', 'http://en.gravatar.com/'
-              = '.'
+              by your email.
         = f.input :name
         = f.input :email
         = f.input :password, hint: "Leave blank if you don't want to change it"
