Users' feedback system

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -12,7 +12,7 @@
               = image_tag user_gravatar(@user, 89), :class => "img-polaroid"
             %p.help-block
               You can change your profile picture at 
-              = link_to 'Gravatar', 'http://en.gravatar.com/'
+              = link_to 'Gravatar', 'http://gravatar.com/emails/'
               by your email.
         = f.input :name
         = f.input :email
