User feedback system

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -14,5 +14,7 @@
       .row
         .span2
           %a{:href => "https://twitter.com/gdolphinstatus", :class => "twitter-follow-button", :data => { :"show-count" => "false", :lang => "en"}} Follow @gdolphinstatus
+        .span2
+          = link_to 'Please give us a feedback', user_feedbacks_path 
         
   
