--- a/app/views/user_feedbacks/new.html.haml
+++ b/app/views/user_feedbacks/new.html.haml
@@ -1,5 +1,6 @@
-%h1 New user_feedback
-
-= render 'form'
-
-= link_to 'Back', user_feedbacks_path
+.row
+  .span2
+  .span8
+    .page-header
+      %h1 Post your feedback
+    = render 'form'
